Fix html errors: &nbsp, <br />, img alt attributes

--- a/work.html
+++ b/work.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" type="text/css" href="work.css" />
   </head>
   <body>
-    <img src="images/background_drawing.png" height="100%" width="100%" alt="A close-up photograph of a drawing" />
+    <img src="images/background_drawing.png" height="1078" width="1440" alt="A close-up photograph of a drawing" />
 
     <div id="hole1-thickness"></div>
     <div id="hole1">
@@ -22,11 +22,11 @@
           <li>
             <a href="index.html">Home</a>
           </li>
-          <br />
+          <li style="line-height: 20px">&nbsp;</li>
           <li>
             <a href="work.html">Work</a>
           </li>
-          <br />
+          <li style="line-height: 20px">&nbsp;</li>
           <li>
             <a href="contact.html">Contact</a>
           </li>
@@ -52,13 +52,13 @@
     <div id="hole3">
       <h1 class="text-danger">Left Brain</h1>
       <br />
-      <img src="images/wf_logo.png" alt="Wells Fargo logo" height="9%"/>
+      <img src="images/wf_logo.png" alt="Wells Fargo logo" height="50" />
       <p><small>Advised businesses on<br />cash flow management</small></p>
       <br />
-      <img src="images/cfa_logo.png" alt="CFA Institute logo" height="7%"/>
+      <img src="images/cfa_logo.png" alt="CFA Institute logo" height="30" />
       <p><small>Level III candidate</small></p>
       <br />
-      <img src="images/foster_logo.png" alt="UW Foster logo" height="7%"/>
+      <img src="images/foster_logo.png" alt="UW Foster logo" height="30" />
       <p><small>Studied finance and economics</small></p>
     </div>
 
@@ -69,15 +69,15 @@
     <div id="hole4">
       <h1 class="text-danger">Right Brain</h1>
         <br />
-        &nbsp
-        <a href="http://princeofmarshes.tumblr.com/" target="_blank"><img src="images/background_drawing.png" height="20%" /></a>
-        &nbsp&nbsp&nbsp&nbsp
-        <a href="https://www.youtube.com/watch?v=l_XQF2Llab8" target="_blank"><img src="images/camila.png" height="20%" /></a>
+        &nbsp;
+        <a href="http://princeofmarshes.tumblr.com/" target="_blank"><img src="images/background_drawing.png" height="80" alt="A piece of art from the Prince of Marshes Tumbler account" /></a>
+        &nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="https://www.youtube.com/watch?v=l_XQF2Llab8" target="_blank"><img src="images/camila.png" height="80" alt="A still shot from the music video of the song When Starts Fall Camila Recchio" /></a>
         <br />
         <br />
-        <a href="https://soundcloud.com/musicofmathis" target="_blank"><img src="images/soundcloud.png" height="20%" /></a>
-        &nbsp&nbsp&nbsp&nbsp
-        <a href="http://www.imdb.com/name/nm5004325/" target="_blank"><img src="images/crosshairs.png" height="20%" /></a>
+        <a href="https://soundcloud.com/musicofmathis" target="_blank"><img src="images/soundcloud.png" height="80" alt="The Graph Tunes profile picture on Sound Cloud" /></a>
+        &nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="http://www.imdb.com/name/nm5004325/" target="_blank"><img src="images/crosshairs.png" height="80" alt="A poster photo of the film Crosshairs" /></a>
     </div>
 
     <div id="cutout4-thickness"></div>
