--- a/contact.html
+++ b/contact.html
@@ -22,11 +22,11 @@
           <li>
             <a href="index.html">Home</a>
           </li>
-          <br />
+          <li style="line-height: 20px">&nbsp;</li>
           <li>
             <a href="work.html">Work</a>
           </li>
-          <br />
+          <li style="line-height: 20px">&nbsp;</li>
           <li>
             <a href="contact.html">Contact</a>
           </li>
@@ -42,14 +42,14 @@
       <h2 class="text-danger">spencerscarpelli@gmail.com</h2>
       <br />
       <a href="https://github.com/spencerscarpelli" target="_blank"><h2 class="text-danger">github.com/spencerscarpelli</h2></a>
-      &nbsp&nbsp
+      &nbsp;&nbsp;
       <br />
       <a href="https://www.linkedin.com/in/spencer-scarpelli-91790b53" target="_blank"><i class="fa fa-linkedin text-danger"></i></a>
-      &nbsp&nbsp
+      &nbsp;&nbsp;
       <a href="http://princeofmarshes.tumblr.com/" target="_blank"><i class="fa fa-tumblr-square text-danger"></i></a>
-      &nbsp&nbsp
+      &nbsp;&nbsp;
       <a href="https://soundcloud.com/musicofmathis" target="_blank"><i class="fa fa-soundcloud text-danger"></i></a>
-      &nbsp&nbsp
+      &nbsp;&nbsp;
       <a href="http://www.facebook.com/spencer.scarpelli" target="_blank"><i class="fa fa-facebook-official text-danger"></i></a>
     </div>
   </body>
