--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" type="text/css" href="main.css" />
   </head>
   <body>
-    <img src="images/background_leaves.png" height="100%" width="100%" alt="A close-up photograph of leaves" />
+    <img src="images/background_leaves.png" height="1078" width="1440" alt="A close-up photograph of leaves" />
 
     <div id="hole1-thickness"></div>
     <div id="hole1">
@@ -22,11 +22,11 @@
           <li>
             <a href="index.html">Home</a>
           </li>
-          <br />
+          <li style="line-height: 20px">&nbsp;</li>
           <li>
             <a href="work.html">Work</a>
           </li>
-          <br />
+          <li style="line-height: 20px">&nbsp;</li>
           <li>
             <a href="contact.html">Contact</a>
           </li>
