Remove height attribute on background images

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" type="text/css" href="main.css" />
   </head>
   <body>
-    <img src="images/background_leaves.png" height="1078" width="1440" alt="A close-up photograph of leaves" />
+    <img src="images/background_leaves.png" width="1440" alt="A close-up photograph of leaves" />
 
     <div id="hole1-thickness"></div>
     <div id="hole1">
