--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,7 @@
 
     <div id="hole2-thickness"></div>
     <div id="hole2">
-      <h2 class="text-danger">spencerscarpelli@gmail.com</h2>
+      <h2 class="text-danger"></h2>
       <br />
       <a href="https://github.com/spencerscarpelli" target="_blank"><h2 class="text-danger">github.com/spencerscarpelli</h2></a>
       &nbsp;&nbsp;
